<resources>
    <string name="app_name">PTT</string>
    <string name="btn_register">register</string>
    <string name="btn_makecall">Dial</string>
    <string name="btn_hangup">Hangup</string>
    <string name="btn_answer">Answer</string>
    <string name="btn_init">Init</string>
    <string name="btn_sendmsg">Send SMS</string>
    <string name="btn_destory">Destory</string>
    <string name="btn_login">Login</string>
    <string name="btn_call">Call</string>
    <string name="btn_incoming">IncomingCall</string>
    <string name="btn_calllog">callog</string>
    <string name="btn_choose_ringtone">Choose Ring</string>
    <string name="tview_main_group">Group</string>
    <string name="tview_main_dial">Dial</string>
    <string name="tview_main_sms">Message</string>
    <string name="tview_main_pbk">PBK</string>
    <string name="tview_main_calllog">CallLog</string>
    <string name="tview_main_setting">Setting</string>
    <string name="current_group">current_grp：</string>
    <string name="current_num">current_num：</string>
    <string name="register_not">Unregister</string>
    <string name="register_ing">Registering</string>
    <string name="register_ed">Registered</string>
    <string name="register_error">Regiser Error</string>
    <string name="call_dialing">Dial</string>
    <string name="call_incoming">Incoming</string>
    <string name="call_ending">Ending</string>
    <string name="call_ended">Ended</string>
    <string name="call_single">Single Call</string>
    <string name="log_delete">Delete</string>
    <string name="log_delete_all">Delete All</string>
    <string name="log_reason_1">myself hangup</string>
    <string name="log_reason_2">other hangup</string>
    <string name="log_reason_3">expetion hangup</string>
    <string name="sms_send">Send</string>
    <string name="setting_talking">Call Setting</string>
    <string name="setting_register">Register Setting</string>
    <string name="setting_alertring">Alert Setting</string>
    <string name="setting_system">System Setting</string>
    <string name="setting_call_single_volume">Single Call Volume</string>
    <string name="setting_call_ring_volume">Incoming Call Volume</string>
    <string name="setting_call_ptt_volume">PTT Volume</string>
    <string name="setting_condition">Profile</string>
    <string name="setting_cond_ring">Ringtone</string>
    <string name="setting_cond_virabate">Vibrate</string>
    <string name="tview_setting_server">Server IP</string>
    <string name="tview_setting_port">Port</string>
    <string name="tview_setting_username">Username</string>
    <string name="tview_setting_password">Password</string>
    <string name="tview_setting_title_register">Register Setting</string>
    <string name="checkbox_setting_autoanswer">Autoanswer in SingleCall</string>
    <string name="checkbox_setting_autoregister">Auto Register</string>
    <string name="setting_auto_start">Auto Startup</string>
    <string name="setting_current_group">Current PTT Group：</string>
    <string name="setting_current_group_on">    √</string>
    <string name="setting_current_group_off1">Now in Ptt Mode</string>
    <string name="setting_current_group_off2">You can not change the Group now</string>
    <string name="setting_server5">.</string>
    <string name="setting_register_pw">register need password!</string>
    <string name="setting_register_pw_false">password wrong！</string>
    <string name="setting_register_ip_false">IP Address wrong！</string>
    <string name="setting_debug_switch">Debug Model</string>
    <string name="notify_title">PTT</string>
    <string name="notify_content">PTT</string>
    <string name="notify_ticker">PTT</string>
    <string name="menu_return">return</string>
    <string name="menu_speaker">speaker</string>
    <string name="menu_handset">handset</string>
    <string name="menu_answer">answer</string>
    <string name="menu_earphone">earphone</string>
    <string name="menu_register">register</string>
    <string name="menu_minialmize">minimize</string>
    <string name="menu_exit">exit</string>
    <string name="menu_reregister">re-register</string>
    <string name="menu_return_ptt">Show Ptt</string>
    <string name="alert_btn_yes">yes</string>
    <string name="alert_btn_no">no</string>
    <string name="alert_btn_ok">alert_ok</string>
    <string name="alert_btn_cancel">btn_cancel</string>
    <string name="alert_title">alert</string>
    <string name="alert_title_server_null">server info null</string>
    <string name="alert_title_user_null">user info null</string>
    <string name="alert_title_init">init</string>
    <string name="alert_title_exit">exit</string>
    <string name="alert_title_register">register</string>
    <string name="alert_title_outingcall">call</string>
    <string name="alert_title_ifexit">completely exit ? </string>
    <string name="alert_title_choosear">Choose Audio Route</string>
    <string name="alert_msg_outingcall_fail">call fail</string>
    <string name="alert_msg_register_fail">register fail</string>
    <string name="alert_msg_password_null">password null</string>
    <string name="alert_msg_server_wrong">server info wrong</string>
    <string name="alert_msg_user_wrong">user info wrong</string>
    <string name="alert_msg_registerinfo_null">register info null</string>
    <string name="alert_msg_registering">registering</string>
    <string name="alert_msg_initing">initing</string>
    <string name="alert_msg_exiting">exiting</string>
    <string name="alert_msg_init_fail">init fail</string>
    <string name="alert_msg_ifreregister">if re-register</string>
    <string name="alert_number_null">num not null</string>
    <string name="alert_number_onlynum">only num</string>
    <string name="alert_msg_norings">No Ringtone</string>
    <string name="alert_msg_receive_ptt">Ptt incoming, switch to PTT?</string>
    <string name="alert_msg_error_msg">Error Message</string>
    <string name="alert_msg_error_code">Error Code</string>
    <string name="alert_msg_status_msg">Status Message</string>
    <string name="alert_msg_status_code">Status Code</string>
    <string name="alert_msg_cm_disconnected">Network is not connecting</string>
    <string name="alert_msg_no_group">No group found</string>
    <string name="alert_msg_fail_ptt">PTT Fail</string>
    <string name="alert_msg_media_fail">Open audio device failed, please restart app mannually</string>
    <string name="alert_msg_ptt_not_closed">You can not change default group in PTT</string>
    <string name="alert_msg_deleted_from_ptt">Deleted from %1$s，close PTT</string>
    <string name="alert_msg_calllog_save_fail">Failed to save calllog</string>
    <string name="alert_msg_no_enough_space">No enough disk space, delete some data manually</string>
    <string name="alert_msg_401">Username or password wrong</string>
    <string name="alert_msg_403">Permission denied</string>
    <string name="alert_msg_408">Request timeout</string>
    <string name="alert_msg_481">Transaction is not existed yet</string>
    <string name="alert_msg_500">Server inner error</string>
    <string name="alert_msg_503">Network is not available</string>
    <string name="alert_msg_502">Gateway error</string>
    <string name="alert_msg_486">Busy</string>
    <string name="alert_msg_504">Disconnected with server</string>
    <string name="alert_msg_no_ptt">PTT has been closed</string>
    <string name="alert_msg_sc_grpnum">Forbid dial group number</string>
    <string name="hint_serverip">ServerIP</string>
    <string name="hint_port">port</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="sp_password">PTT_SP_PASSWORD</string>
    <string name="sp_username">PTT_SP_USERNAME</string>
    <string name="sp_serverip">PTT_SP_SERVERIP</string>
    <string name="sp_port">PTT_SP_PORT</string>
    <string name="sp_autoregister">PTT_SP_AUTOREGISTER</string>
    <string name="sp_auto_answer">PTT_SP_AUTOANSWER</string>
    <string name="sp_ar_handset">PTT_SP_HANDSET</string>
    <string name="sp_ar_speaker">PTT_SP_SPEAKER</string>
    <string name="sp_call_ring_volume">CALL_RING_VOLUME</string>
    <string name="sp_call_single_volume">CALL_SINGLE_VOLUME</string>
    <string name="sp_call_ptt_volume">PTT_RING_VOLUME</string>
    <string name="sp_init_flag">PTT_INIT_FLAG</string>
    <string name="sp_ring_enable">PTT_RING_ENABLE</string>
    <string name="sp_virabate_enable">PTT_VIRABATE_ENABLE</string>
    <string name="sp_current_ringtone">PTT_CURRENT_RINGTONE</string>
    <string name="sp_auto_start">PTT_AUTO_START</string>
    <string name="sp_debug_on">DEBUG_ON</string>
    <string name="default_serverip"/>
    <string name="default_port">5060</string>
    <string name="default_username"/>
    <string name="default_password"/>
    <string name="add_contact">add_contact</string>
    <string name="empty_contact">empty_contact</string>
    <string name="add_success">add_success</string>
    <string name="add_fault">add_fault</string>
    <string name="contact_already_in">the_num_already_have</string>
    <string name="contact_name">contact_name</string>
    <string name="contact_num">contact_num</string>
    <string name="contact_save">contact_save</string>
    <string name="contact_save1">contact error！</string>
    <string name="contact_save2">contact error！</string>
    <string name="contact_total1">contact_total</string>
    <string name="contact_total2">contact_total</string>
    <string name="contact_add">contact_add</string>
    <string name="contact_delete">contact_delete</string>
    <string name="contact_edit">contact_edit</string>
    <string name="contact_call">contact_call</string>
    <string name="contact_msg">contact_msg</string>
    <string name="contact_del_success">contact_del_success</string>
    <string name="contact_del_faulte">contact_del_faulte</string>
    <string name="ok">name_ok</string>
    <string name="cancle">cancle</string>
    <string name="alert">alert！</string>
    <string name="sure">are you sure delete this contact？</string>
    <string name="nopeople">nopeople！</string>
    <string name="loading1">loading……</string>
    <string name="loading2">loading</string>
    <string name="loading3">↓  press down loadmore……</string>
    <string name="loading4">all date loaded！</string>
    <string name="contact_call1">contact_call</string>
    <string name="contact_detail">contact_detail</string>
    <string name="contact_edit1">contact_edit</string>
    <string name="contact_edit_success">contact_edit_success</string>
    <string name="contact_edit_fault">contact_edit_fault</string>
    <string name="contact_del_success1">contact_del_success</string>
    <string name="contact_del_faulte1">contact_del_faulte</string>
    <string name="contact_name2">contact_name</string>
    <string name="contact_num2">contact_num</string>
    <string name="contact_delete1">contact_delete</string>
    <string name="title1">title1</string>
    <string name="title2">title2</string>
    <string name="no_connect">no_connect</string>
    <string name="chat_menu0">chat_menu0</string>
    <string name="chat_menu1">chat_menu1</string>
    <string name="chat_menu2">chat_menu2</string>
    <string name="chat_resend">chat_resend</string>
    <string name="chat_careful">chat_careful</string>
    <string name="chat_oper">chat_oper</string>
    <string name="chat_oper_ok">chat_oper_ok</string>
    <string name="chat_oper_cancle">chat_oper_cancle</string>
    <string name="chat_send_success">chat_send_success</string>
    <string name="selectcontact">selectcontact</string>
    <string name="newmsg_name">newmsg_name</string>
    <string name="newmsg_text">newmsg_text</string>
    <string name="sendnewmsg">sendnewmsg</string>
    <string name="exitnewmsg">exitnewmsg</string>
    <string name="aboutv1">PTT–version</string>
    <string name="aboutv2"></string>
    <string name="aboutv3"></string>
    <string name="aboutv4"></string>
</resources>