<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:scrollbars="vertical" >
    <!-- buttons -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register" />

        <Button
            android:id="@+id/btn_makecall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_makecall" />

        <Button
            android:id="@+id/btn_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_answer" />

        <Button
            android:id="@+id/btn_hangup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_hangup" />

        <Button
            android:id="@+id/btn_init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_init" />

        <Button
            android:id="@+id/btn_destory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_destory" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_sendmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sendmsg" />

        <Button
            android:id="@+id/btn_makegroupcall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_hangup" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_incoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_incoming" />
        <Button
            android:id="@+id/btn_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_calllog" />
        <Button
            android:id="@+id/btn_receive_members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_apply_pttright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        
    </LinearLayout>

</LinearLayout>