<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="80dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ptt_icon" />

    <TextView
        android:id="@+id/textViewversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="80dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:text="@string/aboutv1" />
    <TextView
        android:id="@+id/textViewbuildtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="15dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:text="" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="15dip"
        android:textColor="#000000"
        android:text="@string/aboutv2" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="15dip"
        android:textColor="#000000"
        android:text="@string/aboutv3" />
    <TextView
        android:id="@+id/textView4"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/aboutv4" />

</LinearLayout>