<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<ScrollView
	    android:id="@+id/scroview"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:scrollbars="vertical" >

		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout 
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

				<Button
				    android:id="@+id/selectcontact"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/selectcontact" />

				<EditText 
					android:id="@+id/newmsg_name"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="top"
					android:focusable="true"
					android:maxLength="20"
					android:layout_gravity="center_vertical"
					android:hint="@string/newmsg_name"
					android:inputType="number"
					/>
			</LinearLayout>
			<LinearLayout 
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">
				
				<EditText 
					android:id="@+id/newmsg_text"
					android:layout_width="fill_parent"
					android:layout_height="80dp"
					android:maxLength="120"
					android:hint="@string/newmsg_text"
					android:inputType="textMultiLine"
					/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
	<LinearLayout 
		android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1">
	    
	    <Button 
	    	android:id="@+id/sendnewmsg"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:text="@string/sendnewmsg"
	    	/>
	    <Button 
	    	android:id="@+id/exitnewmsg"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:text="@string/exitnewmsg"
	    	/>
	</LinearLayout>
</LinearLayout>
