<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<ScrollView
	    android:id="@+id/scroview"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:scrollbars="vertical" >

		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout 
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp">
				<ImageView 
					android:id="@+id/btn_img"
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:src="@drawable/contact_user"
					android:contentDescription="@string/app_name"
					android:scaleType="centerCrop"
					/>
				<EditText 
					android:id="@+id/et_name"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="top"
					android:focusable="true"
					android:singleLine="true"
					android:maxLength="20"
					android:layout_gravity="center_vertical"
					android:hint="@string/contact_name"
					/>
			</LinearLayout>
			<LinearLayout 
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp">
				
				<TextView 
					android:autoLink="web"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/contact_num"
					/>
				<EditText 
					android:id="@+id/et_phone"
					android:singleLine="true"
					android:maxLength="20"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:hint="@string/contact_num"
					android:inputType="number"
					/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
	<LinearLayout 
		android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp">
	    
	    <Button 
	    	android:id="@+id/save"
	    	android:layout_width="0dip"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:text="@string/contact_save"
	    	/>
	</LinearLayout>
</LinearLayout>
